app/assets/stylesheets/application.scss
@import 'bootstrap/scss/bootstrap';
@import 'rails_bootstrap_forms';
@import 'font-awesome';
@import 'select2/dist/css/select2';

html, body, .container, .row, .tabbable{height:100%}

body { 
  background-image: url(paperbackground.jpg);
}

#pageContent {
  padding-left: 3%;
  padding-right: 3%;
  padding-bottom: 3%;
  height: calc(95%);
}

#mainContent {
  background-color: white
}

#sidebarMenu {

  padding-top: 3%;
  border-top-left-radius: 30px;
  background-color: white;
  width: 100px;

  .sideLink {
    padding: 0px;
    margin-bottom: 10px;
    border-radius: 25px;
    text-align: left;
    height: 25px;
    width: 100%;
    
  }
  .sideLink img {
    height: 25px;
    width: 25px;
  }

  .sideLink:hover {
    background: rgba(75, 75, 75, 0.25)
    }

  a:link, a:visited, a:hover, a:active  { 
    color: black;
    text-decoration:none;
    font-weight: bold;
    font-family: 'Copperplate Gothic Light';
    font-size: 16px;
    padding: auto;
  }
}

